# ansilove

./: .atom-build.yml  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  ChangeLog  FILE_ID.DIZ  LICENSE  README.md  THANKS  TODO  ansilove.1  ansilove.spec  cleanup.sh  file_id.diz
ansilove/: albinfonts.c  albinfonts.h  alconfig.h  alfonts.h  ansilove-Prefix.pch  ansilove.1  ansilove.c  ansilove.h  ansilove.m  config.h  explode.c  explode.h  filesize.c  filesize.h  fonts.h  info.plist  load_adf.m  load_ansi.m  load_binary.m  load_idf.m  load_pcboard.c  load_pcboard.m  load_tundra.m  load_xbin.m  main.c  main.m  old_main.m  strtolower.c  strtolower.h  strtolower.m  substr.c  substr.h  substr.m
ansilove.xcodeproj/: project.pbxproj
ansis/: andyh-ansilove.ans  avg-alove.ans  cbn-ansilove.ans  cl!-al04.ans  dMG-ansilove.asc  gj-ansilove.ans  no-alove.ans  ns-bp09.ans  sk!n-ansilove.txt  spidy-ansilove.txt  spot-ansilove.txt  tcf-ansilove.xb  us-alov.ans  us-alove.asc
compat/: compat.h
examples/: 43-nslv1.ans  ave-love.ans  bym-ansilove.ans  cl!-al03.ans  cl!-al06.ans  cl!-al07.ans  fil-ping.ans  k1-alove.ans  ko-alove.ans  lu-ansilove.xb  n-silove.ans  om-ansilove.ans  plur-ansilove.txt  rad-love.ans  sph_love.ans  syl-farm.ans  we-alove.ans  yop-ANSilove.ans
examples/burps/: LICENSE  bs-alove.ans  bs-ansilove.ans
examples/cleaner/: LICENSE  cl!-al05.ans
examples/nail/: LICENSE
lib/Mac OS X/libgd/: libgd.2.0.0.dylib
lib/Mac OS X/libjpeg/: libjpeg.8.dylib
lib/MacOSX/libgd/: libgd.3.dylib
lib/MacOSX/libgd/include/: gd.h
lib/MacOSX/libjpeg/: libjpeg.8.dylib
lib/MacOSX/libpng/: libpng15.15.dylib
lib/MacOSX/libpng/include/: pnglibconf.h
man/: ansilove.1
shbuild/: build_ubuntu.sh  build_ubuntu_fo_real.sh
src/: albinfonts.c  albinfonts.h  alconfig.h  ansi.c  ansi.h  ansilove.c  ansilove.h  artworx.c  artworx.h  binary.c  binary.h  config.h  explode.c  explode.h  filesize.c  filesize.h  fonts.c  fonts.h  icedraw.c  icedraw.h  info.plist  main.c  output.c  output.h  pcboard.c  pcboard.h  retina.c  retina.h  sauce.c  sauce.h  seccomp.h  strtolower.c  strtolower.h  substr.c  substr.h  tundra.c  tundra.h  types.c  types.h  xbin.c  (+1 more)
src/loaders/: ansi.c  ansi.h  artworx.c  artworx.h  binary.c  binary.h  icedraw.c  icedraw.h  pcboard.c  pcboard.h  tundra.c  tundra.h  xbin.c  xbin.h
tests/: bs-alove.adf  bs-alove.pcb  bs-alove.tnd  bs-alove.xb  sauce.txt
